css/nav.css
/*Navigation*/

.navigation {
    position: fixed;
    max-height: 70px;
    z-index: 100;
    width: 100%;
    padding-top: 24px;
    background-color: rgba(255, 255, 255, 0.8);
    /*    overflow: hidden;*/
    overflow: hidden;
    -webkit-transition: all 0.5s;
    transition: all 0.5s;
    opacity: 0;
    top: -100px;
    padding-bottom: 6px;
    padding-top: 10px;
}

@media only screen and (min-width: 768px) {
    .navigation {
        max-height: 100%;
        padding-top: 25px;
        overflow: visible;
    }
}

@media only screen and (min-width: 1024px) {
    .navigation {
        background: linear-gradient(rgba(255, 255, 255, 1.0), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.0));
    }
}

.sticky {
    /*    background-color: rgba(255, 255, 255, 0.93);*/
    opacity: 1;
    top: 0px;
    border-bottom: 1px solid lighten(#8f8f8f, 30%);
}

.row {
    width: 100%;
    margin: 0 auto;
    position: relative;
    padding: 0 5%;
    box-sizing: border-box;
}


@media only screen and (min-width: 768px) {
    .row {
        padding: 0 30px;
    }
}

@media only screen and (min-width: 1024px) {
    .row {
        padding: 0 40px;
    }
}

.logo {
    /*    height: 30px;*/
    height: 80px;
    width: 230px;
    font-size: 25px;
    color: #8f8f8f;
    text-transform: uppercase;
    float: left;
    display: block;
    margin-top: 0;
    line-height: 1;
    margin-bottom: 10px;
    background-image: url("../img/logo-sm.png");
    background-size: contain;
    background-repeat: no-repeat;
}

@media only screen and (min-width: 768px) {
    .logo {
        background-image: url("../img/logo-lg.png");
        margin-left: 10px;
        /*        float: none;*/
    }
}


/* Large screens */

@media only screen and (min-width: 1440px) {}


/* XL screens */

@media only screen and (min-width: 2560px) {}



.open-nav {
    max-height: 400px !important;
    min-height: 140px;
}

.open-nav .mobile-toggle {
    transform: rotate(-90deg);
    -webkit-transform: rotate(-90deg);
}



nav {
    float: right;
    width: 50%;
}

nav ul {
    list-style: none;
    /*    overflow: hidden;*/
    text-align: right;
    float: right;
}

nav li {
    display: inline-block;
    margin-left: 35px;
    line-height: 1.5;
}

nav li:not(.button) a {
    color: grey;
    /*    text-transform: uppercase;*/
    text-decoration: none;
    transition: 0.5s;
    line-height: 1.5;
    font-family: "Roboto", sans-serif;
    font-size: 14px;
    /*    font-weight: 200;*/
    letter-spacing: 0.05em;
}

nav li:not(.button) a:hover {
    border-bottom: 1px var(--odyssey_blue_light) dotted;
    color: var(--odyssey_blue_light);
}

nav a:after {
    content: "\00a0\00a0\00a0";
    position: absolute;
    width: 10px;
    height: 15px;
    /*    bottom: 0;*/
    /*    left: 25%;*/
}

nav li.button a {
    height: 100%;
    width: 100%;
    padding: 10px;
    /*    border: 2px grey solid;*/
    transition: 0.75s;
}

nav li.button a:hover {
    /*    background-color: lightgray;*/
    /*    color: white;*/
    /*    border: 2px white solid;*/
    /*    color: grey;*/
    border-bottom: none;
}

@media only screen and (max-width: 768px) {
    nav ul {
        padding-top: 10px;
        margin-bottom: 22px;
        text-align: center;
        width: 100%;
    }
    nav li {
        width: 100%;
        padding: 7px 0;
        margin: 0;
    }
}

/* Medium screens */

@media only screen and (min-width: 768px) {
    nav {
        width: 70%;
    }
    nav:before,
    nav:after {
        content: '';
        display: table;
    }
    nav:after {
        clear: both;
    }
}

/* Medium screens */

@media only screen and (min-width: 1224px) {
    nav {
        width: 80%;
    }
}

.mobile-toggle {
    display: none;
    cursor: pointer;
    font-size: 20px;
    position: absolute;
    right: 22px;
    top: 0;
    width: 30px;
    -webkit-transition: all 200ms ease-in;
    -moz-transition: all 200ms ease-in;
    transition: all 200ms ease-in;
}

.mobile-toggle span {
    width: 30px;
    height: 4px;
    margin-bottom: 6px;
    border-radius: 1000px;
    background: #8f8f8f;
    display: block;
}

/**/

a {
    text-decoration: none;
}

@-webkit-keyframes scroll {
    0% {
        opacity: 1;
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
    100% {
        opacity: 0;
        -webkit-transform: translateY(20px);
        transform: translateY(20px);
    }
}

@keyframes scroll {
    0% {
        opacity: 1;
        -webkit-transform: translateY(0);
        -ms-transform: translateY(0);
        transform: translateY(0);
    }
    100% {
        opacity: 0;
        -webkit-transform: translateY(20px);
        -ms-transform: translateY(20px);
        transform: translateY(20px);
    }
}

/* Small screens */

@media only screen and (max-width: 768px) {}

/* Medium screens */

@media only screen and (min-width: 768px) {}


/* Small screens */

@media only screen and (max-width: 768px) {
    .mobile-toggle {
        display: block;
    }
    form.search-box {
        display: none;
    }
}


/* Medium screens */

@media only screen and (min-width: 768px) {
    /* SEARCH BAR STUFF */
    /* https://codepen.io/choogoor/pen/NGJVMb?limit=all&page=3&q=search */
    form.search-box {
        display: block;
    }
    .search-button {
        position: absolute;
        /*    right: 20px;*/
        /*    top: 50%;*/
        top: 7px;
        /*    transform: translate(0, -50%);*/
    }
    .search-toggle {
        position: relative;
        display: block;
        height: 10px;
        width: 10px;
    }
    .search-toggle::before,
    .search-toggle::after {
        content: '';
        position: absolute;
        display: block;
        transition: all 0.1s;
    }
    .search-toggle::before {
        /*        border: 2px solid #0097bf;*/
        border: 2px solid grey;
        border-radius: 50%;
        width: 100%;
        height: 100%;
        left: -2px;
        top: -2px;
    }
    .search-toggle::after {
        height: 2px;
        width: 7px;
        /*        background: #0097bf;*/
        background: grey;
        top: 10px;
        left: 8px;
        transform: rotate(45deg);
    }
    .search-toggle.active::before {
        width: 0;
        border-width: 1px;
        border-radius: 0;
        transform: rotate(45deg);
        top: -1px;
        left: 4px;
    }
    .search-toggle.active::after {
        width: 12px;
        left: -1px;
        top: 4px;
    }
    .search-input:focus {
        outline: none;
    }
    #header-1 {
        /*        border-bottom: 2px solid #0097bf;*/
        /*        border-bottom: 2px solid grey;*/
    }
    #header-1 .search-box {
        position: absolute;
        bottom: 0;
        width: 100%;
        height: 100%;
        max-height: 0;
        transform: translateY(100%);
        /*        background-color: #0097bf;*/
        background-color: black;
        transition: all 0.3s;
    }
    #header-1 .search-box .search-input {
        width: 100%;
        height: 100%;
        /*        padding: 0 1em;*/
        padding: 0 60px;
        border: 0;
        background-color: transparent;
        opacity: 0;
        color: #fff;
    }
    #header-1 .search-box .search-input::-webkit-input-placeholder {
        color: rgba(255, 255, 255, 0.4);
    }
    #header-1.show .search-box {
        /*        max-height: 40px;*/
        max-height: 50px;
    }
    #header-1.show .search-box .search-input {
        opacity: 1;
        font-size: 18px;
        font-family: "Libre Franklin", sans-serif;
    }
}

